feat: Refactor Program class and update appsettings for Inventario connection

--- a/xops.api/appsettings.json
+++ b/xops.api/appsettings.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "InventarioConnection": "Data Source= localhost;Initial Catalog=Inventario;User Id=sa;Password=Contraseñña1;TrustServerCertificate=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
