operaciones basicas del modulo Marca y configuracion a Db

--- a/xops.api/xops.api.csproj
+++ b/xops.api/xops.api.csproj
@@ -22,6 +22,7 @@
   <ItemGroup>
     <ProjectReference Include="..\xops.common\xops.common.csproj" />
     <ProjectReference Include="..\xops.modules\xops.modules.inventario\xops.inventario.api\xops.inventario.api.csproj" />
+    <ProjectReference Include="..\xops.modules\xops.modules.marcaSvc\xops.marca.api\xops.marca.api.csproj" />
   </ItemGroup>
 
 </Project>
