add modules to program.cs

--- a/xops.api/appsettings.json
+++ b/xops.api/appsettings.json
@@ -1,12 +1,15 @@
 {
   "ConnectionStrings": {
-    "InventarioConnection": "Data Source= localhost;Initial Catalog=Inventario;User Id=sa;Password=Contraseñña1;TrustServerCertificate=True"
+    "Connection": "Data Source= localhost;Initial Catalog=Inventario;User Id=sa;Password=Contraseñña1;TrustServerCertificate=True"
   },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "token":{
+    "key":"this is a super super super secrete key"
   },
   "AllowedHosts": "*"
 }
