--- a/xops.modules/xops.modules.userSvc/xops.user.core/xops.user.core.csproj
+++ b/xops.modules/xops.modules.userSvc/xops.user.core/xops.user.core.csproj
@@ -14,4 +14,8 @@
     <PackageReference Include="Microsoft.Extensions.Identity.Stores" Version="9.0.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Interfaces\" />
+  </ItemGroup>
+
 </Project>
